fix position and scrollbar

--- a/src/styles/Chat.css
+++ b/src/styles/Chat.css
@@ -48,9 +48,8 @@
   background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
   background-repeat: repeat;
   background-position: center;
-  padding: 7px;
-  padding-top: 1em;
-  overflow: auto;
+  padding: 0.5em;
+  overflow-y: scroll;
 }
 
 .chat__message {
